# admin-dashboard

./: .env
data-entry/: Cargo.toml
data-entry/core/: Cargo.toml
data-entry/core/src/: error.rs  excel.rs  instock_status.rs  lib.rs  parser.rs  product.rs  product_builder.rs  product_status.rs
data-entry/csv_files/: products.csv  products.xlsx
data-entry/data-entry/: Cargo.toml
data-entry/data-entry/src/: main.rs
data-migrate/: main.py  products.xlsx  products[:2].xlsx
data-migrate/helpers/: install_fields.py
data-migrate/libs/: category_parser.py  excel.py  sales_catgory_parser.py  specification_parser.py
